# gbkf-core-cpp

./: .gitignore  BUILD.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md
include/GBKF/: Core.hxx  GBKFCore.hxx  GBKFCoreReader.hxx  GBKFCoreWriter.hxx  picosha2.hxx
lib/: Core.cpp  GBKFCore.cpp  GBKFCoreReader.cpp  GBKFCoreWriter.cpp
tests/: test_core.cpp  test_gbkf.cpp  test_gbkf_core.cpp
